# sentinel-os

./: .gitignore  .gitmessage  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: ci-cd.yaml
ai-workers/: lstm_worker.py  predictive_failure.py  system_anomaly.py  torchsig_worker.py  yolov8_worker.py
ai-workers/gnuradio/: adsb_decoder.py
cli/: package.json
cli/src/: index.ts
compositor/: Makefile  config.lua  sentinel-wm.c
compositor/shaders/: crt.frag  radar.frag
docs/: C4ISR_GAP_ANALYSIS.md  DATABASE_ERD.md  ISO_BUILD.md  KERNEL_BUILD.md  LIVE_USB.md  SEMESTER_PROJECT_EVALUATION_REPORT.md
infrastructure/argocd/: sentinel-app.yaml
infrastructure/chaos/: ai-service-pod-delete.yaml
infrastructure/docker/: docker-compose.dev.yml  docker-compose.yml
infrastructure/falco/: sentinel-rules.yaml
infrastructure/istio/: authorization-policies.yaml  circuit-breakers.yaml  gateway.yaml  virtual-services.yaml
infrastructure/kafka/: topics.yaml
infrastructure/kubernetes/: cloudnativepg-cluster.yaml
infrastructure/security/rasp/file_guard/: Cargo.toml
infrastructure/security/rasp/file_guard/src/: main.rs
kernel/: Makefile  rtlsdr-sentinel.c  sentinel-lsm.c
scripts/: build-iso.sh  generate-docker-assets.sh
shell/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/src/: main.rs
tests/: test_integration.py
ui/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+309 files in other folders)
