# sentinel-os/infrastructure/security/rasp/file_guard/Cargo.toml
# RASP file-hash daemon — runtime file integrity monitoring

[package]
name = "sentinel-file-guard"
version = "1.0.0"
edition = "2021"
description = "Sentinel OS RASP file-hash daemon for runtime integrity monitoring"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
